--- a/styles/community-styles.css
+++ b/styles/community-styles.css
@@ -1,6 +1,6 @@
 body {
   font-family: "Roboto", sans-serif;
-  padding-bottom: 70px;
+  padding-bottom: 100px;
 }
 
 img {
@@ -12,7 +12,7 @@ img {
 }
 
 nav {
-  height: 38px;
+  height: 50px;
   background-color: #0b98de;
   padding-bottom: 10px;
   position: relative;
@@ -24,12 +24,12 @@ nav {
 nav a {
   display: block;
   float: left;
-  font-size: 15px;
+  font-size: 20px;
   font-weight: bolder;
   color: white;
   padding-top: 20px;
+  padding-bottom: 20px;
   padding-right: 20px;
-  padding-bottom: 10px;
   padding-left: 20px;
   text-decoration: none;
 }
@@ -39,7 +39,7 @@ nav a:hover {
   background-color: #17b0cf;
 }
 
-.container {
+.main-image {
   position: relative;
 }
 
@@ -52,8 +52,9 @@ h1 {
 
 h1 span {
   color: white;
-  font: bold 24px/45px Helvetica, sans-serif;
+  font: bold 45px/55px Helvetica, sans-serif;
   letter-spacing: -1px;
+  opacity: 0.8;
   background: rgb(0, 0, 0,);
   background: rgba(0, 0, 0, 0.7);
   padding: 10px;
@@ -62,14 +63,49 @@ h1 span {
 .content {
   padding-left: 150px;
   padding-right: 150px;
-  margin-top: 50px;
+  padding-bottom: 100px;
+  line-height: 30px;
+  margin-top: 100px;
   margin-left: auto;
   margin-right: auto;
 }
 
-.article-listing {
-  padding-left: 150px;
-  padding-right: 150px;
+.article-listings {
+  position: relative;
+  line-height: 30px;
+  height: 30px;
+  margin-top: 100px;
   margin-left: auto;
   margin-right: auto;
+  background-color: black;
+}
+
+.article {
+  font-weight: 800;
+  padding-left: 50px;
+  padding-right: 50px;
+  color: white;
+  text-decoration: none;
+}
+
+.article:hover {
+  color: gray;
+  font: bold;
+}
+
+@media only screen and (max-width: 768px) {
+  h1 span {
+    font: bold 25px/25px Helvetica, sans-serif;
+    width: 25%;
+  }
+  .content {
+    margin-right: 30px;
+    margin-left: 30px;
+    padding: 0;
+  }
+  .article {
+    font-size: 15px;
+    padding-right: 20px;
+    padding-left: 20px;
+  }
 }
